// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownList: should render as lower level child 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron top"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <DropdownList
      chevronAlignment="top"
      compact={false}
      iconPosition="right"
      lowerLevel={true}
      noShadow={false}
      value="testValue"
    >
      <span />
    </DropdownList>
  </div>
</div>
`;

exports[`DropdownList: should render in compact mode 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={false}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron top"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render value with children 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron top"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render with center-aligned chevron 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron center"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render with className 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron top"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render without shadow 1`] = `
<div
  className="root noShadow"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="description"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevron top"
      direction="down"
      svgClassName="chevronSvg"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;
